--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *oldfiles*
 *Trained_Models*
 data
+config/temp
 *Untitled.ipynb*
 *ptorch.yml*
 *.out
@@ -27,5 +28,6 @@ config/hpDIRC_config.json
 *torch_wsl.yml*
 *gen_thetas_hpDIRC.tcsh*
 *LUT_Stats*
+*gen_spec_thetas.sh*
 
 
