Updated ratio plots

--- a/config/hpDIRC_config_clean.json
+++ b/config/hpDIRC_config_clean.json
@@ -54,6 +54,15 @@
         "num_steps":100,
         "hidden_nodes": 128
     },
+    "model_Shift":{
+        "num_layers":4,
+        "input_shape":3,
+        "cond_shape":2,
+        "num_steps":125,
+        "hidden_nodes": 128,
+        "noise_schedule":"cosine",
+        "shift_type":"quadratic_shift"
+    },
     "model_FlowMatching": {
         "num_layers": 20,
         "input_shape": 3,
@@ -166,9 +175,11 @@
         "kaon_model_path_Score":"/sciclone/data10/mcmartinez/hpDIRC_Models/KScore_6L_T100_cosine___Jan-24-2025/KScore_6L_T100_cosine_epoch148_train_loss_0.229109.pth",
         "pion_model_path_DDPM":"/sciclone/data10/mcmartinez/hpDIRC_Models/PDDPM_4L_T100___Mar-16-2025_v2/PDDPM_4L_T100_epoch174_train_loss_0.224423.pth",
         "kaon_model_path_DDPM":"/sciclone/data10/mcmartinez/hpDIRC_Models/KDDPM_4L_T100___Mar-17-2025/KDDPM_4L_T100_epoch174_train_loss_0.224459.pth",
+        "pion_model_path_Shift":"/sciclone/data10/mcmartinez/hpDIRC_Models/Trained_Models/Pion_Shift_Model.pth",
+        "kaon_model_path_Shift":"/sciclone/data10/mcmartinez/hpDIRC_Models/KShift_4L_T125___Mar-31-2025_v3/KShift_4L_T125_epoch174_train_loss_0.278269.pth",
         "pion_model_path_FlowMatching": "/sciclone/data10/mcmartinez/hpDIRC_Models/Trained_Models/Pion_FlowMatching_Model.pth",
         "kaon_model_path_FlowMatching": "/sciclone/data10/mcmartinez/hpDIRC_Models/Trained_Models/Kaon_FlowMatching_Model.pth",
-        "fixed_point_dir": "/sciclone/data10/mcmartinez/hpDIRC/Inference/DDPM_4L_T100_6GeV_new",
+        "fixed_point_dir": "/sciclone/data10/mcmartinez/hpDIRC/Inference/Shift_4L_T125_6GeV",
         "full_phase_space_dir": "/sciclone/data10/mcmartinez/hpDIRC/FullPhaseGen/GSGM_4L_T100",
         "out_dir_fixed": "Inference/NF_PhotonSampling",
         "out_dir_cont": "Inference/NF_FastSimulated_FPS_PhotonSampling",
