Add trained models

--- a/.gitignore
+++ b/.gitignore
@@ -5,19 +5,17 @@
 *Inference_OLD*
 *Generations*
 *oldfiles*
-*Trained_Models*
 data
 config/temp
 *Untitled.ipynb*
 *ptorch.yml*
 *.out
-Photon_Yield
 *Untitled.ipynb
 *PlotDLL.ipynb
 *.pdf
 *KDE_Fits
 *KDE_Fits_OLD*
-*Trained_Models_OLD*
+Trained_Models_OLD
 config/hpDIRC_config_clean_COPY.json
 config/hpDIRC_config_gulf.json
 config/hpDIRC_config.json
