--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ gen_mix_hpDIRC.sh
 batch_timing.py
 plotting_extras.ipynb
 config/hpDIRC_config_local.json
+gen_fullphase_hpDIRC.sh
+train_script.sh
+torch_linux.yml
