--- a/config/config.json
+++ b/config/config.json
@@ -169,7 +169,8 @@
         "out_dir_cont": "Inference/FullPhaseSpace",
         "time_imaging_dir": "TimeImaging",
         "KDE_dir": "KDE_Fits/6.0/Test_FastDIRC_800k_NF_800kG",
-        "simulation_dir": "MySample"
+        "simulation_dir": "MySample",
+        "pdf_dir": "MySample"
     },
     "Photon_Sampler": {
         "Pion_dataset": "data/Pion_Hits_Dataset.pkl",
