Docker file fixes

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,4 +5,4 @@ services:
       args:
         BASE_IMAGE: pytorch/pytorch:2.5.1-cpu
     # don’t ask Compose for GPUs
-    device_requests: []
+    deploy: {}
