--- a/config/config_docker.json
+++ b/config/config_docker.json
@@ -153,29 +153,29 @@
     },
     "Inference": {
         "samples": 1,
-        "pion_model_path_NF": "Trained_Models/Pion_NF_Model.pth",
-        "kaon_model_path_NF": "Trained_Models/Kaon_NF_Model.pth",
-        "pion_model_path_CNF": "Trained_Models/Pion_CNF_Model.pth",
-        "kaon_model_path_CNF": "Trained_Models/Kaon_CNF_Model.pth",
-        "pion_model_path_Score":"Trained_Models/Pion_Score_Model.pth",
-        "kaon_model_path_Score":"Trained_Models/Kaon_Score_Model.pth",
-        "pion_model_path_DDPM":"Trained_Models/Pion_DDPM_Model.pth",
-        "kaon_model_path_DDPM":"Trained_Models/Kaon_DDPM_Model.pth",
-        "pion_model_path_FlowMatching": "Trained_Models/Pion_FlowMatching_Model.pth",
-        "kaon_model_path_FlowMatching": "Trained_Models/Kaon_FlowMatching_Model.pth",
-        "fixed_point_dir": "FixedPointGenerations",
-        "full_phase_space_dir": "FullPhaseGenerations",
-        "out_dir_fixed": "Inference/FixedPoint",
-        "out_dir_cont": "Inference/FullPhaseSpace",
-        "time_imaging_dir": "TimeImaging",
-        "KDE_dir": "KDE_Fits/6.0/Test_FastDIRC_800k_NF_800kG",
+        "pion_model_path_NF": "workspace/Trained_Models/Pion_NF_Model.pth",
+        "kaon_model_path_NF": "workspace/Trained_Models/Kaon_NF_Model.pth",
+        "pion_model_path_CNF": "workspace/Trained_Models/Pion_CNF_Model.pth",
+        "kaon_model_path_CNF": "workspace/Trained_Models/Kaon_CNF_Model.pth",
+        "pion_model_path_Score":"workspace/Trained_Models/Pion_Score_Model.pth",
+        "kaon_model_path_Score":"workspace/Trained_Models/Kaon_Score_Model.pth",
+        "pion_model_path_DDPM":"workspace/Trained_Models/Pion_DDPM_Model.pth",
+        "kaon_model_path_DDPM":"workspace/Trained_Models/Kaon_DDPM_Model.pth",
+        "pion_model_path_FlowMatching": "workspace/Trained_Models/Pion_FlowMatching_Model.pth",
+        "kaon_model_path_FlowMatching": "workspace/Trained_Models/Kaon_FlowMatching_Model.pth",
+        "fixed_point_dir": "outputs/FixedPointGenerations",
+        "full_phase_space_dir": "outputs/FullPhaseGenerations",
+        "out_dir_fixed": "outputs/Inference/FixedPoint",
+        "out_dir_cont": "outputs/Inference/FullPhaseSpace",
+        "time_imaging_dir": "outputs/TimeImaging",
+        "KDE_dir": "outputs/KDE_Fits/6.0/Test_FastDIRC_800k_NF_800kG",
         "simulation_dir": "MySample",
         "pdf_dir": "MySample"
     },
     "Photon_Sampler": {
-        "Pion_dataset": "data/Pion_Hits_Dataset.pkl",
-        "Kaon_dataset": "data/Kaon_Hits_Dataset.pkl",
-        "Pion_LUT_path": "Photon_Yield/Pion_Photon_Yield.pkl",
-        "Kaon_LUT_path": "Photon_Yield/Kaon_Photon_Yield.pkl"
+        "Pion_dataset": "workspace/data/Pion_Hits_Dataset.pkl",
+        "Kaon_dataset": "workspace/data/Kaon_Hits_Dataset.pkl",
+        "Pion_LUT_path": "workspace/Photon_Yield/Pion_Photon_Yield.pkl",
+        "Kaon_LUT_path": "workspace/Photon_Yield/Kaon_Photon_Yield.pkl"
     }
 }
