--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 
 services:
   generator:
@@ -6,14 +7,11 @@ services:
       dockerfile: Dockerfile
     image: deep_hpdirc:v3
 
-    deploy: 
-      resources:                 # new Compose ≥ 3.8 way to get GPUs
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    device_requests:
+      - driver: nvidia
+        count: all
+        capabilities: [gpu]
 
     volumes: 
       - ./Trained_Models:/workspace/Trained_Models:ro 
-      - ./outputs:/workspace/outputs
+      - ./outputs:/outputs
